--- a/module/login/public/index.html
+++ b/module/login/public/index.html
@@ -1,8 +1,18 @@
 <div id="root" v-bind:class="{login: current==0, help: current==2, info: current==1}">
 <header :class=moduleClass>
-	<span id="logo">DELFHOS</span>
+	<div id="logo"><svg viewBox="0 0 100 100"> <g class="dark"><path class="cls-1" d="M22.71,9.38l-.43,2.18H28L27.5,14.3H21.73l-.46,2.37h6.78l-.59,2.83H17.1L19.68,6.55H29.81l-.57,2.83Z"/><path class="cls-1" d="M32,6.55h3.66l-2,10h6.17l-.59,2.9H29.41Z"/><path class="cls-1" d="M45.62,6h7.74l-.57,2.83H48.62m.45.55H46.76l-.57,2.85H51.9l-.57,2.83H45.63l-.89,4.44H41.09L43.68,6.55h2.39"/><path class="cls-1" d="M57.24,16.81l-.53,2.68H53.05l1.12-5.62m-.45-.55L55.19,6h3.66l-1,4.84h5l1-4.84,3.91.25L64.89,18.94H61.23l1-5h-5l-.47,2.35"/><path class="cls-1" d="M82.45,18.38l1.44-2.73a8.09,8.09,0,0,0,4.29,1.27c1.4,0,2.21-.44,2.21-1.14,0-1.73-6.26-.77-6.26-4.83,0-2.78,2.38-4.6,6.19-4.6A9,9,0,0,1,95,7.46l-1.33,2.71a6.63,6.63,0,0,0-3.54-1c-1.51,0-2.32.55-2.32,1.25,0,1.77,6.26.76,6.26,4.73,0,2.76-2.43,4.59-6.21,4.59A10.07,10.07,0,0,1,82.45,18.38Z"/><path class="cls-1" d="M75.87,6.29,67.8,14.06l6.43,5.69L82.31,12Zm-3.88,8,3.15-5.46,3,2.92L75,17.22Z"/><path class="cls-1" d="M17.84,6.48,15.23,19.57H12.06l.19-.93a3.92,3.92,0,0,1-2.77,1.09,4.07,4.07,0,0,1-4-4.36,5.3,5.3,0,0,1,5.2-5.52,3.31,3.31,0,0,1,2.91,1.27l.93-4.64Zm-4.92,7.88a1.68,1.68,0,0,0-1.8-1.83c-1.34,0-2.27,1.08-2.27,2.68A1.66,1.66,0,0,0,10.65,17,2.37,2.37,0,0,0,12.92,14.37Z"/></g></svg></div>
 	<nav>
-		<li v-for="o, i in options" @click="goToSection(i)">{{o}}</li>
+		<li @click="goToSection(0)" v-bind:class="{active: current==0}">
+			<svg viewBox="0 0 100 100"> <path class="dark" d="M21,9.07H44.89V74.52H85.15V93.44H21Z"/><path class="middle" d="M39.87,65.72h1V73.4H29.09V72.3H39.87Z"/><path class="middle" d="M35,64.24a6.05,6.05,0,1,1,6.13-6.06A6.17,6.17,0,0,1,35,64.24Zm0-11a4.93,4.93,0,1,0,5.09,4.92A5.06,5.06,0,0,0,35,53.26Z"/><path class="middle" d="M34.8,44.44V39.71h4.53a6.88,6.88,0,0,1,1.79,4.58,6.12,6.12,0,0,1-12.24,0,6.8,6.8,0,0,1,1.79-4.58l.77.76a5.57,5.57,0,0,0-1.53,3.82,5.09,5.09,0,0,0,10.17,0,5.75,5.75,0,0,0-1.21-3.48h-3v3.63Z"/><path class="middle" d="M29.09,37.07V36H40.92v1.1Z"/><path class="middle" d="M29.09,33v-1.1l10-7.57h-10v-1.1H40.92v1.1l-10,7.57h10V33Z"/></svg>
+		</li>
+		<li @click="goToSection(1)" v-bind:class="{active: current==1}">
+			<svg viewBox="0 0 100 100"> <path class="dark" d="M44.15,9.07H68V93.44H44.15Z"/><path class="middle" d="M51.22,73v-1.1H63V73Z"/><path class="middle" d="M51.22,68.95v-1.1l10-7.57h-10v-1.1H63v1.1L53,67.85H63v1.1Z"/><path class="middle" d="M52.27,55.07h4.22V48.53h1.07v6.54H63v1.12H51.22V47.83h1Z"/><path class="middle" d="M57.12,46.29a6.05,6.05,0,1,1,6.13-6.06A6.17,6.17,0,0,1,57.12,46.29Zm0-11a4.93,4.93,0,1,0,5.09,4.92A5.06,5.06,0,0,0,57.12,35.31Z"/></svg>
+
+		</li>
+		<li @click="goToSection(2)" v-bind:class="{active: current==2}">
+			<svg viewBox="0 0 100 100">
+<polygon class="dark" points="2.92 77.8 46.46 2.37 56.55 19.85 13.9 96.82 2.92 77.8"/><path class="dark" d="M35.91,73.44H30.12l-1,2.38h-1L32.5,65.73h1L38,75.83H37Zm-.41-.91L33,66.89l-2.48,5.64Z"/><path class="dark" d="M42.29,71.71l-4.08-6h1.18l3.39,5.05,3.42-5.05h1.15l-4.07,6v4.11h-1Z"/><path class="dark" d="M48.87,71.74v-6h.94v6a3.18,3.18,0,1,0,6.35,0v-6h.94v6a4.12,4.12,0,1,1-8.23,0Z"/><path class="dark" d="M59.74,65.73h3.42c3.14,0,5.36,2.09,5.36,5a5,5,0,0,1-5.36,5.05H59.74ZM63.16,75a4.19,4.19,0,1,0,0-8.36H60.68V75Z"/><path class="dark" d="M77,73.44H71.22l-1,2.38h-1L73.6,65.73h1l4.45,10.09h-1Zm-.41-.91-2.48-5.64-2.48,5.64Z"/><line class="line" x1="95.05" y1="91.9" x2="47.7" y2="9.26"/></svg>
+		</li>
 	</nav>
 </header>
 <main v-bind:style="mainStyle">
