Fix the bug at update the profile's img change the scss' chat to render the img into a mask. It only works on the last updates of the browsers. It would be change. Dont allow to resize a windows to a width less of the min with and block the displacement in case of it was at one extrem of screen Created a class for all img into a mask and use it in the search html file and in the chat Now the message on the form are display after the input that generate this messages Fix some issue into the security validate of the password Now the external libraries are loaded from local, no from a external server Change scss of the chat, the filesystem, the login and the vars

--- a/module/filesystem/external/search/index.html
+++ b/module/filesystem/external/search/index.html
@@ -5,7 +5,7 @@
 	<nav class="match">
 		<li v-for="f in match" @click="selectUser(f.user)">
 			<div class="img">
-	            		<img class="profilePhoto" :src="'profile/'+f.user" :alt="f.user+' photo'">
+	            		<img class="profilePhoto" :src="'profile/'+f.user" :alt="f.user+' photo'" class="mask">
 			</div>
 			<div class="name">{{f.user}}</div>
 		</li>
@@ -14,7 +14,7 @@
 <main>
 	<nav class="friends">
 		<li v-for="f in friends" @click="selectUser(f)">
-			<div class="img"><img :src="'profile/'+f" :alt="f +' photo'"></div>
+			<div class="img"><img :src="'profile/'+f" :alt="f +' photo'" class="mask"></div>
 			<div>{{f}}</div>
 		</li>
 	</nav>
