--- a/module/chat/public/index.html
+++ b/module/chat/public/index.html
@@ -11,21 +11,21 @@
 	</span>
 	<nav id="listSearchUser">
 		<li v-for="chat in searchChats" @click="openChat(chat.user)" class="chatData">
-			<img class="profilePhoto" :src="'profile/'+chat.user" :alt="chat.user+' photo'">
+			<img class="profilePhoto mask" :src="'profile/'+chat.user" :alt="chat.user+' photo'" >
 			<span>{{chat.user}}</span>
 		</li>
 	</nav>
 </div>
 <nav id="chats" v-bind:class="{hidden: chat}">
 	<li v-for="chat in chats" @click="openChat(chat.user)">
-		<img class="profilePhoto" :src="'profile/'+chat.user">
+		<img class="profilePhoto mask" :src="'profile/'+chat.user"> 
 		<p>{{chat.user}}</p><span>{{chat.number}}</span>
 	</li>
 	<nav id="sideMenu" @click="showChats"><span>{{chatPending}}</span><svg viewBox="0 0 2000 2000"><polygon class="middle" points="614.5 898.5 575.82 941.55 967.61 770.95 966.82 596.45 1476.15 858.2 966.03 1119.95 965.25 945.45 291.5 1293.38 291.5 1357.5 934.5 983.5 935.5 1233.5 1584.5 858.5 936.5 483.5 937.5 733.5 614.5 898.5"/></svg> </nav>
 </nav>
 <main v-if=chat>
 	<div class="chatData">
-		<img :src="'profile/'+activeChat">
+		<img :src="'profile/'+activeChat" class="mask">
 		<p>{{activeChat}}</p>
 	</div>
 	<div id="chatArea">
