fix some issues of the filesystem on the back-end and on the front-end change some styles on the filesystem and the login

--- a/module/filesystem/public/index.html
+++ b/module/filesystem/public/index.html
@@ -6,10 +6,21 @@
 </ul>
 <ul id="options" class="topBar">
 	<li id="newFolder">
-		<img src="common/images/createFolder.svg" alt="Nueva carpeta">
+		<svg viewBox="0 0 2000 2000">
+			<polyline class="middle" points="1548.83 577.12 971.63 1576.86 308.3 1576.09 307.8 325.74 571.93 326.74 715.93 576.74"/>
+			<polygon class="light " points="184.05 395.32 307.8 325.74 307.95 396 184.05 395.32"/>
+			<polyline class="light " points="848.1 1645.68 971.85 1575.73 850 1575 848.5 1645.5"/>
+			<polygon class="light " points="1419.98 651.74 1418.02 648.26 1545 577.12 1548.83 577.12 1547.75 579 1419.98 651.74"/>
+			<polyline class="middle " points="1425.95 645.71 848.75 1645.44 184.55 1645.67 184.55 645.67 184.05 395.32 549.05 395.32 693.05 645.33"/>
+			<polygon class="middle" points="1474.58 1575 1331.39 1575 901.84 827 1045.02 827 1474.58 1575"/>
+			<rect class="middle " x="733.73" y="1141.41" width="858.54" height="143.19"/>
+			<polygon class="light" points="1140.37 1284.59 1066.47 1141.41 734 1141 734 1285 1140.37 1284.59"/>
+		</svg>
 	</li>
 	<li id="download">
-		<img src="common/images/download.svg" alt="Descargar">
+		<svg viewBox="0 0 2000 2000">
+			<polygon class="middle" points="960 597 916.95 558.32 1087.55 950.11 1262.05 949.32 1000.3 1458.65 738.55 948.53 913.05 947.75 565.12 274 501 274 875 917 625 918 1000 1567 1375 919 1125 920 960 597"/>
+		</svg>
 	</li>
 </ul>
 <ul class="frecuentFile">
