--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
 	</div>
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://vuejs.org/js/vue.js"></script>-->
-	<script src="http://192.168.1.12:8080/common/libs/jquery.js"></script>
-	<script src="http://192.168.1.12:8080/common/libs/vue.js"></script>
+	<script src="http://delfhos.com/common/libs/jquery.js"></script>
+	<script src="http://delfhos.com/common/libs/vue.js"></script>
 	#{js}
 	<script type="text/javascript" src="/node_modules/socket.io-client/dist/socket.io.js"></script>
 	<script type="text/javascript" src="/commonModules/communication/client.js"></script>
